--- a/src/app.html
+++ b/src/app.html
@@ -1,12 +1,15 @@
 <!doctype html>
 <html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		%sveltekit.head%
-	</head>
-	<body data-sveltekit-preload-data="hover">
-		<div style="display: contents">%sveltekit.body%</div>
-	</body>
+<head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Your Site Title</title> <!-- Add a meaningful title -->
+    <link rel="icon" href="%sveltekit.assets%/favicon.png" />
+    <meta name="description" content="A brief description of your site for SEO." /> <!-- Optional: Add a description for SEO -->
+    <meta name="theme-color" content="#ffffff" /> <!-- Optional: Define a theme color for mobile browsers -->
+    %sveltekit.head% <!-- SvelteKit specific head content -->
+</head>
+<body data-sveltekit-preload-data="hover">
+    <div style="display: contents">%sveltekit.body%</div> <!-- SvelteKit specific body content -->
+</body>
 </html>
